# pycomplete

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_pycomplete.py
.github/workflows/: ci.yml  release.yml
examples/: README.md  argparse_example.py  click_example.py  setup.py
pycomplete/: __init__.py  __main__.py  getters.py
pycomplete/templates/: __init__.py  bash.tpl  fish.tpl  powershell.tpl  zsh.tpl
