[tool]
[tool.pdm]
name = "pycomplete"
version = {from = "pycomplete/__init__.py"}
description = "A Python library to generate static completion scripts for your CLI app"
author = "Frost Ming <mianghong@gmail.com>"
license = "BSD-3-Clause"
homepage = "https://github.com/frostming/pycomplete"
python_requires = ">=3.6"
readme = "README.md"
keywords = ["cli", "shell"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.pdm.dependencies]

[tool.pdm.dev-dependencies]
pytest = "<7.0.0,>=6.1.1"
click = "<8.0.0,>=7.1.2"

[tool.pdm.cli]
pycomplete = "pycomplete.__main__:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
