[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dynamic = ["version", "classifiers"]
version = {from = "pycomplete/__init__.py"}
requires-python = ">=3.6"
license = {text = "BSD-3-Clause"}
dependencies = []
dev-dependencies = [
    "pytest<7.0.0,>=6.1.1",
    "click<8.0.0,>=7.1.2",
]
name = "pycomplete"
description = "A Python library to generate static completion scripts for your CLI app"
readme = "README.md"
keywords = ["cli", "shell"]
classifiers = [
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://github.com/frostming/pycomplete"

[project.optional-dependencies]

[project.scripts]
pycomplete = "pycomplete.__main__:main"
