[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "pycomplete"
description = "A Python library to generate static completion scripts for your CLI app"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
dependencies = []
readme = "README.md"
keywords = ["cli", "shell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/frostming/pycomplete"

[project.scripts]
pycomplete = "pycomplete.__main__:main"

[tool.pdm.version]
source = "file"
path = "pycomplete/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7",
    "click>=7",
]
